HttpClient update
- fills out JavaDoc
- allows query parameters in POST
- adds addFilePart(String name, String data, String contentType, String
fileName)